[package]
name = "crustility"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }
env_logger = "0.10"
indexmap = "2.0.0"

#SEE: https://github.com/serialport/serialport-rs/pull/94
serialport = { git = "https://github.com/LukaOber/serialport-rs" }
thiserror = "1.0.48"
serde = { version = "1.0.164", features = ["derive"], default-features = false }
log = "0.4.20"
